test/sema/typeck/lambda/param-type-missing.dora
fn f() { |x|: Int32 { x }; }

//====================
// error: cannot infer type for lambda parameter.
// --> param-type-missing.dora:1:10
//  | fn f() { |x|: Int32 { x }; }
//             ~~~~~~~~~~~~~~~~
//  | 
// 1 error found.
